cmake_minimum_required(VERSION 3.15)
project(${PROJECT_NAME})


set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -D FREEGLUT_STATIC")

# find source files
file(GLOB_RECURSE DIR_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE DIR_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
file(GLOB_RECURSE DIR_HEADLESS ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)

message(STATUS "CMAKE_CURRENT_SOURCE_DIR = ${CMAKE_CURRENT_SOURCE_DIR}")
message(STATUS "CMAKE_CURRENT_BINARY_DIR = ${CMAKE_CURRENT_BINARY_DIR}")

# copy index.html to runtime environment
set(RESOURCES_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../resources/)
message(STATUS "RESOURCES_PATH = " ${RESOURCES_PATH})
file(COPY ${RESOURCES_PATH} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})


add_executable(${PROJECT_NAME} ${DIR_SRCS} ${DIR_HEADERS} ${DIR_HEADLESS})
target_link_libraries(${PROJECT_NAME} pthread)